--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
   </head>
 
   <body>
+    <% if user_signed_in? %>
+      <%= render "layouts/navbar" %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
