add styles to devise views

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,8 +7,11 @@
           <%= link_to 'New Project', new_project_path, class: "text-white px-4 py-2" %>
         </li>
         <li class="flex items-center p-1 text-sm gap-x-2 text-gray-200">
-        <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class: "text-gray-200 hover:text-white" %>
-
+          <% unless user_signed_in? %>
+          <%= link_to 'Log In', new_user_session_path, class: "text-gray-200 hover:text-white" %>
+          <% else %>
+          <%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete }, class: "text-gray-200 hover:text-white" %>
+          <% end %>
         </li>
       </ul>
     </div>
