add navigation links and specs for models

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -21,3 +21,7 @@
     <% end %>
   </tbody>
 </table>
+
+<div class="mt-6 text-center">
+  <%= link_to 'New Project', new_project_path, class: "px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600" %>
+</div>
