--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -31,3 +31,7 @@
     <%= f.submit "Create Project", class: "bg-blue-500 text-white px-6 py-2 rounded-lg hover:bg-blue-600 transition duration-300" %>
   </div>
 <% end %>
+
+  <div class="mt-6 text-center">
+      <%= link_to 'Back to Project', root_path, class: "px-4 py-2 bg-gray-500 text-white rounded-md hover:bg-gray-600" %>
+  </div>
